@@ -1,1 +1,1 @@
-1.19.2b
+1.19.3
