@@ -35,7 +35,7 @@ _reverse_11880_extract() {
 	}
 	/<[^[:space:]>]*[[:space:]]class="head[[:space:]]/,/<[^[:space:]>]*[[:space:]]class="numericdata/ {
 	    /<[^[:space:]>]*[[:space:]]class="numericdata/ b found
-	    /<a href=[^>]*#ratingform/ d
+	    /<a href=[^>]*#ratingForm/ d
 	    H
 	}
 	b
