@@ -858,3 +858,11 @@
 	* wittegids_be.sh: Belgische Rückwärtssuche
 
 	callmonitor-1.19.2
+
+2011-09-25:
+
+	* Kleine Anpassungen/Umbenennungen im Webinterface
+	* 11880.sh: Bewertung "(0)" aus Ergebnis entfernt
+	* dasoertliche.sh: (schon wieder) Anpassung an geändertes Format
+
+	callmonitor-1.19.3
